auto-test/tests/chapter_17/invalid_types/extra_credit/switch_void.c

void f(void) {
    return;
}

int main(void) {
    switch(f()) {
        default: return 0;
    }
}